completes index.html file structure

--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!--First, we make a <div> and give it an id of "todo-container",
+to act as a container for our todo list.
+We create another <div> and give it an id of "header".
+Inside of the <div> we create an <h1> tag with the title "To-Do List".
+Then, inside of the <div id="todo-form"> create an <input> element.
+This will be used for the new task in which the user writes the name of the task.
+We then create a <button> tag with an id of "input-button" for our 
+"Add" button to add our task to the list.
+Right beneath that, we create an <h2> tag with the title "Task List"
+along with a <ul> unordered list element, and give it an id of "list-container" 
+this is where we will display each task.-->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
