add counter for completed and Uncompleted tasks

--- a/index.html
+++ b/index.html
@@ -36,5 +36,13 @@ this is where we will display each task.-->
     
     </div>
 
+    <hr/>
+    <div id="counter-containers">
+        <div id="task-counters">
+            Completed: <span id="completed-counter">0</span> | Uncompleted:
+            <span id="uncompleted-counter">0</span>
+        </div>
+    </div>
+
 </body>
 </html>
